--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -681,3 +681,45 @@ html, body {
 .copy-clipboard:hover {
   opacity: 0.8;
 }
+
+.tag {
+  box-sizing: border-box;
+  margin: 0 8px 0 0;
+  color: #000000d9;
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.5715;
+  list-style: none;
+  font-feature-settings: "tnum";
+  display: inline-block;
+  height: auto;
+  padding: 0 7px;
+  font-size: 12px;
+  line-height: 20px;
+  white-space: nowrap;
+  background: #fafafa;
+  border: 1px solid #d9d9d9;
+  border-radius: 2px;
+  opacity: 1;
+  transition: all .3s;
+  &.green {
+    color: #389e0d;
+    background: #f6ffed;
+    border-color: #b7eb8f;
+  }
+  &.blue {
+    color: #096dd9;
+    background: #e6f7ff;
+    border-color: #91d5ff;
+  }
+  &.red {
+    color: #cf1322;
+    background: #fff1f0;
+    border-color: #ffa39e;
+  }
+  &.gold {
+    color: #d48806;
+    background: #fffbe6;
+    border-color: #ffe58f;
+  }
+}
