Adds new logo. Adds tag styling

--- a/source/localizable/index.html.md.erb
+++ b/source/localizable/index.html.md.erb
@@ -57,7 +57,7 @@ let api = kittn.authorize('meowmeowmeow');
 
 Factoro uses API keys to allow access to the API. As an administrator, you can get your API key in your [settings page](https://app.factoro.mx/bank/settings).
 
-`Authorization: Bearer ${token}
+`Authorization: Bearer ${token}`
 
 <aside class="notice">
 You must replace <code>${token}</code> with your personal API key.
