--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -80,8 +80,11 @@ html, body {
   // This is the logo at the top of the ToC
   .logo {
     display: block;
-    max-width: 100%;
+    max-width: 80%;
+    margin-top: $logo-margin;
     margin-bottom: $logo-margin;
+    object-fit: contain;
+    margin: auto;
   }
 
   &>.search {
